      hyphens.  If you use lowercase letters, they will be automatically
      forced to uppercase for you.  This was done because cpanm relies on
      author IDs following the  PAUSE convention.  I had hoped that Pinto
      could be more liberal about author IDs, but it seems we must conform so
      that we can cooperate with the rest of the toolchain.

      The --no-history repository configuration is no longer supported.  This
      feature was experimental and the use case hasn't proven to be valid.

      ENHANCEMENTS:

      The names of those kind souls who generously helped finance Pinto
      through the crowdfunding campaing on Crowdtilt are now listed in 
      Pinto::Manual::Thanks.

      Pinto::Server (a.k.a. pintod) will abort the action if it looses the
      connection with the client.  So, for example, you can press Ctrl-C in
      the middle of pulling a long chain of dependencies into a remote
      repository and the server will immediately stop and roll back the entire
      transaction.

      The progress meter is now visible when using a remote repository.  The
      progress meter is never shown when --verbose or --quiet is set, or when
      STDERR is not connected to a terminal.

      BUG FIXES:

      The "install" command can now be used on a locked stack, but only if the
      --do-pull option is not given.  If you want to pull packges while
      installing, then you must unlock the stack first.  Thanks Jeremy
      Marshal.

      The "install" command can now be used on a remote repository that has
      basic HTTP authentication enabled.  Beware that cpanm does not sanitize
      passwords from its log messages.  I'm working with miyagawa to fix that.


0.084_01  2013-06-16 00:53:47 America/Los_Angeles

      !! DEVELOPER RELEASES !!

      Changes consolidated above under version 0.085.


0.084     2013-05-14 17:24:22 America/Los_Angeles

      ENHANCEMENTS:

      Revised documentation for pintod.

      BUG FIXES:
