@@ -128,8 +128,6 @@ sub _add {
 sub _check_for_duplicate {
     my ($self, $archive) = @_;
 
-    return if $self->repo->config->allow_duplicates;
-
     my $sha256 = sha256($archive);
     my $dupe = $self->repo->db->schema->search_distribution({sha256 => $sha256})->first;
 
