@@ -145,15 +145,6 @@ has log_dir => (
 );
 
 
-has allow_duplicates => (
-    is         => 'ro',
-    isa        => Bool,
-    key        => 'allow_duplicates',
-    default    => 0,
-    documentation => 'Allow this repository to contain duplicate distributions',
-);
-
-
 has sources  => (
     is        => 'ro',
     isa       => Str,
